[gd_scene load_steps=23 format=3 uid="uid://bx3xmo2otglfh"]

[ext_resource type="Script" path="res://player/control_player_body_2d.gd" id="1_prgbp"]
[ext_resource type="Texture2D" uid="uid://605vviddb3ua" path="res://assets/Player/char_blue_2.png" id="2_y2p88"]
[ext_resource type="Animation" uid="uid://dhqbdwvo7icx4" path="res://animations/player_animations/player_idle.res" id="3_at5vp"]
[ext_resource type="Script" path="res://classes/hurtbox.gd" id="4_4fhwu"]
[ext_resource type="Animation" uid="uid://dtgesqtus4chs" path="res://animations/player_animations/player_jumping.res" id="4_ee21t"]
[ext_resource type="Animation" uid="uid://drhd8s8apr6w4" path="res://animations/player_animations/player_runing.res" id="5_qt82u"]
[ext_resource type="Animation" uid="uid://cxwypubbwgqwl" path="res://animations/player_animations/player_landing.res" id="6_7npjk"]
[ext_resource type="Animation" uid="uid://c0urhgp3ulwts" path="res://animations/player_animations/player_falling.res" id="7_nsblr"]
[ext_resource type="Script" path="res://classes/StateMachine.gd" id="8_k13mb"]
[ext_resource type="Animation" uid="uid://dfcaqry1ap885" path="res://animations/player_animations/wall_sliding.res" id="8_vflrg"]
[ext_resource type="Animation" uid="uid://ucts37xbna6w" path="res://animations/player_animations/combo_attack.res" id="10_jgljx"]
[ext_resource type="Animation" uid="uid://bojhi37gm366x" path="res://animations/player_animations/attack.res" id="11_mlvkm"]
[ext_resource type="Animation" uid="uid://bynvo7dcnkj64" path="res://animations/player_animations/critical_attack.res" id="12_w3q7q"]
[ext_resource type="Script" path="res://classes/hitbox.gd" id="14_c05f6"]
[ext_resource type="Animation" uid="uid://w5euu5ertvnn" path="res://animations/player_animations/hurt.res" id="15_81y4t"]
[ext_resource type="Animation" uid="uid://b50sdqj20uogx" path="res://animations/player_animations/die.res" id="16_4s1n6"]
[ext_resource type="Script" path="res://classes/stats.gd" id="17_5htdj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xneqw"]
size = Vector2(10, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xkf34"]
size = Vector2(19, 16)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0ot48"]
radius = 5.0
height = 28.0

[sub_resource type="Animation" id="Animation_na4h4"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Graphic2D/Sprite_Player:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 336, 56)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Graphic2D/Sprite_Player:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Graphic2D/Sprite_Player:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Graphic2D/Sprite_Player:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Graphic2D/Sprite_Player:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Graphic2D/Sprite_Player:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_y2p88")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Graphic2D/Sprite_Player:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -28)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../Graphic2D/Sprite_Player:region_enabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ayu57"]
_data = {
"RESET": SubResource("Animation_na4h4"),
"attack": ExtResource("11_mlvkm"),
"combo_attack": ExtResource("10_jgljx"),
"critical_attack": ExtResource("12_w3q7q"),
"die": ExtResource("16_4s1n6"),
"falling": ExtResource("7_nsblr"),
"hurt": ExtResource("15_81y4t"),
"idle": ExtResource("3_at5vp"),
"jumping": ExtResource("4_ee21t"),
"landing": ExtResource("6_7npjk"),
"runing": ExtResource("5_qt82u"),
"wall_sliding": ExtResource("8_vflrg")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_prgbp")
RUN_SPEED_MAX = 105.0

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("8_k13mb")

[node name="Graphic2D" type="Node2D" parent="."]

[node name="Sprite_Player" type="Sprite2D" parent="Graphic2D"]
position = Vector2(0, -28)
texture = ExtResource("2_y2p88")
flip_h = true
hframes = 6
region_enabled = true
region_rect = Rect2(0, 0, 336, 56)

[node name="HandChecker" type="RayCast2D" parent="Graphic2D"]
position = Vector2(0, -27)
rotation = -1.57079
target_position = Vector2(-1.33514e-05, 6)

[node name="FootChecker" type="RayCast2D" parent="Graphic2D"]
rotation = 4.71238
target_position = Vector2(-1.33276e-05, 6)

[node name="Hurtbox" type="Area2D" parent="Graphic2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("4_4fhwu")

[node name="hurtbox" type="CollisionShape2D" parent="Graphic2D/Hurtbox"]
position = Vector2(0, -14)
shape = SubResource("RectangleShape2D_xneqw")

[node name="HitBox" type="Area2D" parent="Graphic2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource("14_c05f6")

[node name="hitbox" type="CollisionShape2D" parent="Graphic2D/HitBox"]
position = Vector2(14.5, -16)
shape = SubResource("RectangleShape2D_xkf34")
disabled = true

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -14)
shape = SubResource("CapsuleShape2D_0ot48")

[node name="Animation_PlayerStates" type="AnimationPlayer" parent="."]
root_node = NodePath("../CollisionShape")
libraries = {
"": SubResource("AnimationLibrary_ayu57")
}

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="JumpRequestTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AttackRequestTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="InvincibleTimer" type="Timer" parent="."]
one_shot = true

[node name="Stats" type="Node" parent="."]
script = ExtResource("17_5htdj")
MAX_HEALTH = 100

[connection signal="hurt" from="Graphic2D/Hurtbox" to="." method="_on_hurtbox_hurt"]
